FLY wire David/force-app/main/default/objects/Account/fields/Acc_Bypass_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Acc_Bypass_DateTime__c</fullName>
    <description>Admin purpose only. Not for reporting. Set by Flows to bypass validation rules. Works with Acc bypass checkbox formula field.</description>
    <inlineHelpText>Admin purpose only. Not for reporting. Set by Flows to bypass validation rules. Works with Acc bypass checkbox formula field.</inlineHelpText>
    <label>Acc Bypass DateTime</label>
    <type>DateTime</type>
</CustomField>