FLY wire David/force-app/main/default/objects/Account/fields/Acc_Flow_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Acc_Flow_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Admin use only to trigger updates and bypass on flow automation for account records.</description>
    <inlineHelpText>Admin use only to trigger updates and bypass on flow automation for account records.</inlineHelpText>
    <label>Acc Flow Trigger</label>
    <type>Checkbox</type>
</CustomField>