FLY wire David/force-app/main/default/objects/Account/fields/Acc_GM_Cost__c.field-meta.xml
<CustomField>
    <fullName>Acc_GM_Cost__c</fullName>
    <description>Rollup of Gross Margin Cost from Prod config records</description>
    <inlineHelpText>Rollup of Gross Margin Cost from Prod config records</inlineHelpText>
    <label>Acc GM Cost</label>
    <summarizedField>Product_Configuration__c.Portal_Margin_Cost__c</summarizedField>
    <summaryForeignKey>Product_Configuration__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>