FLY wire David/force-app/main/default/objects/Account/fields/Acc_GM_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Acc_GM_Revenue__c</fullName>
    <description>Rollup Gross Margin Revenue from Prod Configs</description>
    <inlineHelpText>Rollup Gross Margin Revenue from Prod Configs</inlineHelpText>
    <label>Acc GM Revenue</label>
    <summarizedField>Product_Configuration__c.Portal_Margin_Revenue__c</summarizedField>
    <summaryForeignKey>Product_Configuration__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>