FLY wire David/force-app/main/default/objects/Account/fields/Acc_Last_Activity__c.field-meta.xml
<CustomField>
    <fullName>Acc_Last_Activity__c</fullName>
    <description>Last Task or Event linked to Account not from Marketo</description>
    <inlineHelpText>Last Task or Event linked to Account not from Marketo</inlineHelpText>
    <label>Acc Last Activity</label>
    <type>DateTime</type>
</CustomField>