FLY wire David/force-app/main/default/objects/Account/fields/Acc_Val_Bypass__c.field-meta.xml
<CustomField>
    <fullName>Acc_Val_Bypass__c</fullName>
    <description>Admin field not for reporting. Used to bypass validation rules when Flows are triggered. Works with Opp Bypass DateTime</description>
    <formula>Acc_Bypass_DateTime__c &gt; NOW() - 0.00005787037 /*Five Seconds*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Admin field not for reporting. Used to bypass validation rules when Flows are triggered. Works with Opp Bypass DateTime</inlineHelpText>
    <label>Acc Val Bypass</label>
    <type>Checkbox</type>
</CustomField>