FLY wire David/force-app/main/default/objects/Account/fields/Accommodation_Management_System__c.field-meta.xml
<CustomField>
    <fullName>Accommodation_Management_System__c</fullName>
    <description>WPM Field Migration</description>
    <inlineHelpText>WPM Field Migration</inlineHelpText>
    <label>Accommodation Management System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ellucian Banner</fullName>
            </value>
            <value>
                <fullName>Fidelio Opera</fullName>
            </value>
            <value>
                <fullName>Guestline</fullName>
            </value>
            <value>
                <fullName>Hallpad</fullName>
            </value>
            <value>
                <fullName>Kinetic Solutions KxStudent</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Occam PAMS</fullName>
            </value>
            <value>
                <fullName>Occam Room Service</fullName>
            </value>
            <value>
                <fullName>Other (In-house or bespoke)</fullName>
            </value>
            <value>
                <fullName>RMS Housing</fullName>
            </value>
            <value>
                <fullName>StarRez</fullName>
            </value>
            <value>
                <fullName>TCAS Online</fullName>
            </value>
            <value>
                <fullName>Occam</fullName>
                <isActive>false</isActive>
                <label>Occam</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>