FLY wire David/force-app/main/default/objects/Account/fields/Accommodation_System_Provider__c.field-meta.xml
<CustomField>
    <fullName>Accommodation_System_Provider__c</fullName>
    <description>From Tom/Simon, information gathered to help with Integration decisions.</description>
    <label>Accommodation System Provider</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Adriondack</fullName>
            </value>
            <value>
                <fullName>Campus Living</fullName>
            </value>
            <value>
                <fullName>CampusOne</fullName>
            </value>
            <value>
                <fullName>Canada Campus Communities</fullName>
            </value>
            <value>
                <fullName>Canada Home Stay</fullName>
            </value>
            <value>
                <fullName>Canada Homestay Network</fullName>
            </value>
            <value>
                <fullName>Hallpad</fullName>
            </value>
            <value>
                <fullName>Kinetix</fullName>
                <label>Kinetic</label>
            </value>
            <value>
                <fullName>Mercury RMS</fullName>
            </value>
            <value>
                <fullName>Nester</fullName>
            </value>
            <value>
                <fullName>StarRez</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>