FLY wire David/force-app/main/default/objects/Account/fields/Account_BDR__c.field-meta.xml
<CustomField>
    <fullName>Account_BDR__c</fullName>
    <description>Field created to copy the lookup field called &quot;BDR Owner&quot; because Marketo can not see the values in lookup fields.</description>
    <label>Account BDR</label>
    <length>50</length>
    <type>Text</type>
</CustomField>