FLY wire David/force-app/main/default/objects/Account/fields/Account_Capabilities__c.field-meta.xml
<CustomField>
    <fullName>Account_Capabilities__c</fullName>
    <description>Global Payments field</description>
    <label>Account Capabilities</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Payout</fullName>
            </value>
            <value>
                <fullName>Collection</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>