FLY wire David/force-app/main/default/objects/Account/fields/Account_Category__c.field-meta.xml
<CustomField>
    <fullName>Account_Category__c</fullName>
    <description>Originally Created for BDR team for Jason and Allison. Now more used by Sales Leadership to designate Accounts as Targets.</description>
    <label>Account Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Assigned</fullName>
            </value>
            <value>
                <fullName>Limited</fullName>
            </value>
            <value>
                <fullName>Open Opportunity</fullName>
            </value>
            <value>
                <fullName>Partner - Do Not Prospect</fullName>
            </value>
            <value>
                <fullName>Target</fullName>
            </value>
            <value>
                <fullName>Target Upsell</fullName>
            </value>
            <value>
                <fullName>Top US 100</fullName>
            </value>
            <value>
                <fullName>Top Target</fullName>
            </value>
            <value>
                <fullName>Next US 150</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
                <isActive>false</isActive>
                <label>Customer</label>
            </value>
            <value>
                <fullName>Whitespace</fullName>
                <isActive>false</isActive>
                <label>Whitespace</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>