FLY wire David/force-app/main/default/objects/Account/fields/Account_in_Sales_Console__c.field-meta.xml
<CustomField>
    <fullName>Account_in_Sales_Console__c</fullName>
    <description>Used for the Account Planning app to easily switch between apps</description>
    <formula>HYPERLINK(&quot;/lightning/app/standard__LightningSalesConsole/r/Account__c/&quot; &amp; Id &amp; &quot;/view&quot;, &quot;Sales Console&quot;, &quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Click to go to the full Account page in Sales Console App.</inlineHelpText>
    <label>Account in Sales Console</label>
    <type>Text</type>
</CustomField>