FLY wire David/force-app/main/default/objects/Account/fields/Account_Industry__c.field-meta.xml
<CustomField>
    <fullName>Account_Industry__c</fullName>
    <description>The industry that this account is in.</description>
    <inlineHelpText>Enter the industry that this account is in.</inlineHelpText>
    <label>Account Industry</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Industry</valueSetName>
    </valueSet>
</CustomField>