FLY wire David/force-app/main/default/objects/Account/fields/Account_Membership_Association__c.field-meta.xml
<CustomField>
    <fullName>Account_Membership_Association__c</fullName>
    <description>Select the association this account is a member of.</description>
    <inlineHelpText>Select the association this account is a member of.</inlineHelpText>
    <label>Account Membership Association</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Membership_Association</valueSetName>
    </valueSet>
</CustomField>