FLY wire David/force-app/main/default/objects/Account/fields/Account_Old_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_Old_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>ID in previous Salesforce system or Simplee Salesforce ID</description>
    <externalId>true</externalId>
    <label>Account Old ID</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>