FLY wire David/force-app/main/default/objects/Account/fields/Account_RM__c.field-meta.xml
<CustomField>
    <fullName>Account_RM__c</fullName>
    <description>Copy of name in lookup field &apos;Relationship Manager&apos; filled in via WF, for Pardot to be able to see the data.</description>
    <inlineHelpText>Copy of name in lookup field &apos;Relationship Manager&apos; filled in via WF, for Pardot to be able to see the data.</inlineHelpText>
    <label>Account RM</label>
    <length>100</length>
    <type>Text</type>
</CustomField>