FLY wire David/force-app/main/default/objects/Account/fields/Account_Simplee_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_Simplee_ID__c</fullName>
    <description>18 Digit ID from Simplee Salesforce Org</description>
    <externalId>true</externalId>
    <inlineHelpText>18 Digit ID from Simplee Salesforce Org</inlineHelpText>
    <label>Account Simplee ID</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>