FLY wire David/force-app/main/default/objects/Account/fields/Account_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Status__c</fullName>
    <description>What is the current status of this account.  Using global picklist set.</description>
    <inlineHelpText>Enter the current status of this account.  Prospect = non client / Active = Contract signed</inlineHelpText>
    <label>Account Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Status</valueSetName>
    </valueSet>
</CustomField>