FLY wire David/force-app/main/default/objects/Account/fields/Account_Status_Date__c.field-meta.xml
<CustomField>
    <fullName>Account_Status_Date__c</fullName>
    <description>Automatically filled in when Account Status changes. This is the date the account went live or became inactive due to merger, out of business, etc.</description>
    <inlineHelpText>Automatically filled in when Account Status changes. This is the date the account went live or became inactive due to merger, out of business, etc.</inlineHelpText>
    <label>Account Status Date</label>
    <type>Date</type>
</CustomField>