FLY wire David/force-app/main/default/objects/Account/fields/Account_Sub_Industry__c.field-meta.xml
<CustomField>
    <fullName>Account_Sub_Industry__c</fullName>
    <description>Enter the sub industry category for this account.</description>
    <inlineHelpText>Enter the sub industry category for this account.</inlineHelpText>
    <label>Account Sub Industry</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Account_Industry__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Sub_Industry</valueSetName>
    </valueSet>
</CustomField>