FLY wire David/force-app/main/default/objects/Account/fields/AccountLongID__c.field-meta.xml
<CustomField>
    <fullName>AccountLongID__c</fullName>
    <description>18 Character ID for easy Excel Vlookup</description>
    <formula>casesafeid(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>18 Character ID for easy Excel Vlookup</inlineHelpText>
    <label>AccountLongID</label>
    <type>Text</type>
</CustomField>