FLY wire David/force-app/main/default/objects/Account/fields/Accounts_Payable_Competitor__c.field-meta.xml
<CustomField>
    <fullName>Accounts_Payable_Competitor__c</fullName>
    <description>Name of the provider being used for international AP, ie Agent commissions &amp; supplier payments. SAL-2642</description>
    <inlineHelpText>Name of the provider being used for international AP, ie Agent commissions &amp; supplier payments</inlineHelpText>
    <label>Accounts Payable Competitor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bank of Scotland</fullName>
            </value>
            <value>
                <fullName>Barclays</fullName>
            </value>
            <value>
                <fullName>Convera</fullName>
            </value>
            <value>
                <fullName>Corpay</fullName>
            </value>
            <value>
                <fullName>HSBC</fullName>
            </value>
            <value>
                <fullName>Lloyds</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Santander</fullName>
            </value>
            <value>
                <fullName>Transfermate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>