FLY wire David/force-app/main/default/objects/Account/fields/Active_Parent_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Active_Parent_Accounts__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Active Parent Accounts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>