FLY wire David/force-app/main/default/objects/Account/fields/Admissions_System__c.field-meta.xml
<CustomField>
    <fullName>Admissions_System__c</fullName>
    <description>SAL-806, requested by Jess to track admission systems.</description>
    <inlineHelpText>This is an EDU only field that is the responsibility of the RM. It should be completed at the same point as the Student Information System being filled out.</inlineHelpText>
    <label>Admissions System</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AcademyFIVE</fullName>
            </value>
            <value>
                <fullName>Aimaira</fullName>
            </value>
            <value>
                <fullName>Anthology Reach</fullName>
            </value>
            <value>
                <fullName>ApplyAlberta</fullName>
            </value>
            <value>
                <fullName>Auriga</fullName>
            </value>
            <value>
                <fullName>Azorus CRM</fullName>
            </value>
            <value>
                <fullName>DISCO</fullName>
            </value>
            <value>
                <fullName>DreamApply</fullName>
            </value>
            <value>
                <fullName>eBACAS</fullName>
            </value>
            <value>
                <fullName>EdMiss</fullName>
            </value>
            <value>
                <fullName>Element451</fullName>
            </value>
            <value>
                <fullName>Ellucian Recruit</fullName>
            </value>
            <value>
                <fullName>Embark</fullName>
            </value>
            <value>
                <fullName>Engage</fullName>
            </value>
            <value>
                <fullName>Enroller</fullName>
            </value>
            <value>
                <fullName>Enroly</fullName>
            </value>
            <value>
                <fullName>EPBC</fullName>
            </value>
            <value>
                <fullName>Full Fabric</fullName>
            </value>
            <value>
                <fullName>Greymatter</fullName>
            </value>
            <value>
                <fullName>Hub Apply</fullName>
            </value>
            <value>
                <fullName>Hubspot</fullName>
            </value>
            <value>
                <fullName>iSAMS Admissions</fullName>
            </value>
            <value>
                <fullName>KEI</fullName>
            </value>
            <value>
                <fullName>MS Dynamics</fullName>
            </value>
            <value>
                <fullName>Mundus</fullName>
            </value>
            <value>
                <fullName>OCAS</fullName>
            </value>
            <value>
                <fullName>Open Apply</fullName>
            </value>
            <value>
                <fullName>Oracle</fullName>
            </value>
            <value>
                <fullName>Oscar CRM</fullName>
            </value>
            <value>
                <fullName>OUAC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>