FLY wire David/force-app/main/default/objects/Account/fields/Agent_Client__c.field-meta.xml
<CustomField>
    <fullName>Agent_Client__c</fullName>
    <description>Select if one of our Agent Clients disburses fund to this Institution. If yes, note if they have requested we make this institution a client. - Used to help identify most important prospects for Pay Any School Initiative.</description>
    <inlineHelpText>Select Yes if one of our Agent Clients disburses funds to this Institution. If yes, note if the agent(s) have requested we make this institution a client by selecting &apos;Yes - Agent Requested&apos;</inlineHelpText>
    <label>Agent Client</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Yes - Agent Requested</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>