FLY wire David/force-app/main/default/objects/Account/fields/Agent_Tier__c.field-meta.xml
<CustomField>
    <fullName>Agent_Tier__c</fullName>
    <description>Classify the Tier the Agent is in based on size.</description>
    <inlineHelpText>Classify the Tier the Agent is in based on size.</inlineHelpText>
    <label>Agent Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>