FLY wire David/force-app/main/default/objects/Account/fields/Agents__c.field-meta.xml
<CustomField>
    <fullName>Agents__c</fullName>
    <description>List of out Agent Clients that disburse funds to this Institution. Created for Pay Any School initiative. Short term solution.</description>
    <inlineHelpText>List of out Agent Clients that disburse funds to this Institution.</inlineHelpText>
    <label>Agents</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>