FLY wire David/force-app/main/default/objects/Account/fields/Aggregate_GM__c.field-meta.xml
<CustomField>
    <fullName>Aggregate_GM__c</fullName>
    <description>Aggregate of Prod Config GM Revenue - Cost / Revenue % - SAL-2767
Not needed, this is now calculated in Flow.</description>
    <formula>( Acc_GM_Revenue__c - Acc_GM_Cost__c )/Acc_GM_Revenue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Aggregate of Prod Config GM Revenue - Cost / Revenue in %</inlineHelpText>
    <label>Aggregate GM%</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>