FLY wire David/force-app/main/default/objects/Account/fields/Alias__c.field-meta.xml
<CustomField>
    <fullName>Alias__c</fullName>
    <description>Global Payments field</description>
    <label>Alias</label>
    <type>TextArea</type>
</CustomField>