FLY wire David/force-app/main/default/objects/Account/fields/Alt_Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Alt_Payment_Method__c</fullName>
    <description>Denote when an Institution uses Alternative payment methods. Created to capture HigerEd Points clients. -Tom Metcalf</description>
    <inlineHelpText>Denote when an Institution uses one of these alternative payment methods.</inlineHelpText>
    <label>Alt Payment Method</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agents</fullName>
            </value>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>HigherEdPoints.com</fullName>
            </value>
            <value>
                <fullName>Paypal</fullName>
            </value>
            <value>
                <fullName>Plastiq</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>