FLY wire David/force-app/main/default/objects/Account/fields/Alt_PYMT_Method_CCYs__c.field-meta.xml
<CustomField>
    <fullName>Alt_PYMT_Method_CCYs__c</fullName>
    <description>B2B Field to help with ARR and Payment Flow Analysis. SAL-3145</description>
    <inlineHelpText>Select the Alternative Payment Method Currencies.</inlineHelpText>
    <label>Alt PYMT Method CCYs</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Currencies</valueSetName>
    </valueSet>
</CustomField>