FLY wire David/force-app/main/default/objects/Account/fields/Annual_Patient_PYMT_volume__c.field-meta.xml
<CustomField>
    <fullName>Annual_Patient_PYMT_volume__c</fullName>
    <label>Annual Patient PYMT volume ($$)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>