FLY wire David/force-app/main/default/objects/Account/fields/Annual_Print_Statement_Volume__c.field-meta.xml
<CustomField>
    <fullName>Annual_Print_Statement_Volume__c</fullName>
    <label>Annual Print Statement Volume</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>