FLY wire David/force-app/main/default/objects/Account/fields/Annual_PYMT_Volume__c.field-meta.xml
<CustomField>
    <fullName>Annual_PYMT_Volume__c</fullName>
    <description>B2B Field to help with ARR and Payment Flow Analysis. SAL-3141</description>
    <inlineHelpText>Enter the Total Flows estimated annual Payment volume.</inlineHelpText>
    <label>Annual PYMT Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>