FLY wire David/force-app/main/default/objects/Account/fields/Applicable_Taxes__c.field-meta.xml
<CustomField>
    <fullName>Applicable_Taxes__c</fullName>
    <description>Enter the applicable taxes based on the partner/banks’s business model &amp; Flywire’s status in the market.</description>
    <inlineHelpText>Enter the applicable taxes based on the partner/banks’s business model &amp; Flywire’s status in the market.</inlineHelpText>
    <label>Applicable Taxes</label>
    <length>100</length>
    <type>Text</type>
</CustomField>