FLY wire David/force-app/main/default/objects/Account/fields/Avg_PYMT_Size__c.field-meta.xml
<CustomField>
    <fullName>Avg_PYMT_Size__c</fullName>
    <description>Avg PYMT Size from Looker</description>
    <label>Avg PYMT Size</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>