FLY wire David/force-app/main/default/objects/Account/fields/Back_Office_Platform_Name__c.field-meta.xml
<CustomField>
    <fullName>Back_Office_Platform_Name__c</fullName>
    <description>Global Payments field</description>
    <label>Back Office/Platform Name</label>
    <type>TextArea</type>
</CustomField>