FLY wire David/force-app/main/default/objects/Account/fields/Bad_Debt_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Bad_Debt_Vendor__c</fullName>
    <label>Bad Debt Vendor</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AmeriCollect</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>