FLY wire David/force-app/main/default/objects/Account/fields/Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>Bank_Name__c</fullName>
    <description>Global Payments Field</description>
    <inlineHelpText>For EDU - The Depository Bank</inlineHelpText>
    <label>Bank Name</label>
    <type>TextArea</type>
</CustomField>