FLY wire David/force-app/main/default/objects/Account/fields/Bank_Transfer_CCYs__c.field-meta.xml
<CustomField>
    <fullName>Bank_Transfer_CCYs__c</fullName>
    <description>B2B Field to help with ARR and Payment Flow Analysis. SAL-3141</description>
    <inlineHelpText>Select all the currencies that will be used with Bank Transfers.</inlineHelpText>
    <label>Bank Transfer CCYs</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Currencies</valueSetName>
    </valueSet>
</CustomField>