FLY wire David/force-app/main/default/objects/Account/fields/Bank_Transfer_Provider__c.field-meta.xml
<CustomField>
    <fullName>Bank_Transfer_Provider__c</fullName>
    <description>WPM Bank Transfer Provider</description>
    <inlineHelpText>WPM Bank Transfer Provider</inlineHelpText>
    <label>Bank Transfer Provider</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CIBC</fullName>
            </value>
            <value>
                <fullName>Flywire</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>TransferMate</fullName>
            </value>
            <value>
                <fullName>WUBS</fullName>
            </value>
            <value>
                <fullName>Western Union Business Solutions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>