FLY wire David/force-app/main/default/objects/Account/fields/Bank_Transfer_Usage__c.field-meta.xml
<CustomField>
    <fullName>Bank_Transfer_Usage__c</fullName>
    <description>Frequency of Bank transfers/ wires</description>
    <inlineHelpText>If client receives bank Transfers, what is the frequency of use.</inlineHelpText>
    <label>Bank Transfer Usage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>