FLY wire David/force-app/main/default/objects/Account/fields/BDR_Owner__c.field-meta.xml
<CustomField>
    <fullName>BDR_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Business Development Owner</description>
    <inlineHelpText>Business Development Owner</inlineHelpText>
    <label>BDR Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>